
public interface ComportementCancan {

	void cancaner();

}
