
public interface ComportementVol {

	void voler();

}
