@startuml

title __SRC's Class Diagram__\n


    abstract class Canard {
        {abstract} + afficher()
        + cancaner()
        + defComportementCancan()
        + defComportementVol()
        + nager()
        + voler()
    }



    class CanardEnPlastique {
        + CanardEnPlastique()
        + afficher()
    }



    class Colvert {
        + Colvert()
        + afficher()
    }



    class SuperCanard {
        {static} + main()
    }

    namespace behaviours.cancaner {

        interface behaviours.cancaner.ComportementCancan {
            {abstract} + cancaner()
        }

        namespace impl {
            class CanardMuet {
                + cancaner()
            }

            class Cancan {
                + cancaner()
            }

            class Coincoin {
                + cancaner()
            }
        }
    }


    behaviours.cancaner.impl.CanardMuet .up.|> behaviours.cancaner.ComportementCancan
    behaviours.cancaner.impl.Cancan .up.|> behaviours.cancaner.ComportementCancan
    behaviours.cancaner.impl.Coincoin .up.|> behaviours.cancaner.ComportementCancan


    namespace behaviours.voler {

        interface behaviours.voler.ComportementVol {
            {abstract} + voler()
        }

        namespace impl {
            class behaviours.voler.impl.NePasVoler {
                + voler()
            }

            class behaviours.voler.impl.VolerAvecDesAiles {
                + voler()
            }
        }
    }
        

    behaviours.voler.impl.NePasVoler .up.|> behaviours.voler.ComportementVol
    behaviours.voler.impl.VolerAvecDesAiles .up.|> behaviours.voler.ComportementVol



    Canard o-- behaviours.cancaner.ComportementCancan : comportementCancan
    Canard o-- behaviours.voler.ComportementVol : comportementVol
    CanardEnPlastique -up-|> Canard
    Colvert -up-|> Canard


right footer

Done by Anastasiia Repryntseva
PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
